tests/offload/egressfirewall/egressfirewall.yaml
apiVersion: k8s.ovn.org/v1
kind: EgressFirewall
metadata:
  name: default
  namespace: egressfirewall
spec:
  egress: 
  - type: Allow
    to:
      cidrSelector: 172.22.0.0/24
  - type: Deny
    to:
      cidrSelector: google.com
