tests/offload/egressfirewall/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: egressfirewall
  labels:
    env: egressfirewall
